# mrpack-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Shuttle.toml  setup.sh
src/: auth.rs  error.rs  handlers.rs  main.rs
src/config/: mod.rs
src/utils/: mod.rs
static/: admin.html  index.html  login.html
static/css/: admin.css  index.css  login.css
static/js/: admin.js  login.js
storage/: .gitkeep
