[package]
name = "mrpack_api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = { version = "0.8.6", features = ["multipart"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "set-header"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File handling
tokio-util = { version = "0.7", features = ["io"] }
zip = "6.0.0"

# Security - Password hashing
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.21"

# Configuration
dotenvy = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Misc Utils
bon = "3.8.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true